Correction du bug de compilation passage de Java 16 à Java 11